# unzippers

./: .eslintrc.yml  .gitignore  .prettierignore  Cargo.toml  LICENCE.md  README.md  index.d.ts  index.js  memory-leak-detect.mjs  package-lock.json  package.json
.github/workflows/: lint.yaml  memory-leak-detect.yaml  publish.yaml  test.yaml
benches/: bench.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
test/: unzippers.js  unziprs.js  zippers.js
test/resources/: foo
