[package]
name = "zippers"
authors = ["Jean Arhancet"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.6.3"
napi-derive = "2.6.0"
walkdir = "2.3.2"
zip = "0.6.2"


[target.'cfg(all(target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "2"
